// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel component renders correctly 1`] = `
<CustomCarousel
  autoplay={true}
  legendPosition="left"
>
  <Carousel
    autoPlay={true}
    axis="horizontal"
    centerMode={false}
    centerSlidePercentage={80}
    dynamicHeight={false}
    emulateTouch={false}
    infiniteLoop={true}
    interval={3000}
    onChange={[Function]}
    onClickItem={[Function]}
    onClickThumb={[Function]}
    selectedItem={1}
    showArrows={false}
    showIndicators={true}
    showStatus={false}
    showThumbs={true}
    statusFormatter={[Function]}
    stopOnHover={false}
    swipeScrollTolerance={5}
    swipeable={true}
    transitionTime={2000}
    useKeyboardArrows={false}
    verticalSwipe="standard"
    width="100%"
  >
    <div>
      <div
        className="carousel carousel-slider"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <button
          className="control-arrow control-prev control-disabled"
          onClick={[Function]}
          type="button"
        />
        <div
          className="slider-wrapper axis-horizontal"
          style={Object {}}
        >
          <ReactSwipe
            allowMouseEvents={false}
            className="slider animated"
            onSwipeDown={[Function]}
            onSwipeEnd={[Function]}
            onSwipeLeft={[Function]}
            onSwipeMove={[Function]}
            onSwipeRight={[Function]}
            onSwipeStart={[Function]}
            onSwipeUp={[Function]}
            selectedItem={1}
            style={
              Object {
                "MozTransform": "translate3d(-200%,0,0)",
                "MozTransitionDuration": "2000ms",
                "MsTransform": "translate3d(-200%,0,0)",
                "MsTransitionDuration": "2000ms",
                "OTransform": "translate3d(-200%,0,0)",
                "OTransitionDuration": "2000ms",
                "WebkitTransform": "translate3d(-200%,0,0)",
                "WebkitTransitionDuration": "2000ms",
                "msTransform": "translate3d(-200%,0,0)",
                "msTransitionDuration": "2000ms",
                "transform": "translate3d(-200%,0,0)",
                "transitionDuration": "2000ms",
              }
            }
            tagName="ul"
            tolerance={5}
          >
            <ul
              className="slider animated"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "MozTransform": "translate3d(-200%,0,0)",
                  "MozTransitionDuration": "2000ms",
                  "MsTransform": "translate3d(-200%,0,0)",
                  "MsTransitionDuration": "2000ms",
                  "OTransform": "translate3d(-200%,0,0)",
                  "OTransitionDuration": "2000ms",
                  "WebkitTransform": "translate3d(-200%,0,0)",
                  "WebkitTransitionDuration": "2000ms",
                  "msTransform": "translate3d(-200%,0,0)",
                  "msTransitionDuration": "2000ms",
                  "transform": "translate3d(-200%,0,0)",
                  "transitionDuration": "2000ms",
                }
              }
            >
              <li
                className="slide"
                key="itemKey3clone/.$Banku Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Banku Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Banku Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey0/.$Safari Meeting Room, Andela New York"
                onClick={[Function]}
              >
                <div
                  key="Safari Meeting Room, Andela New York"
                >
                  <p
                    className="legend left"
                  >
                    Safari Meeting Room, Andela New York
                  </p>
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide selected"
                key="itemKey1/.$Cognitio Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Cognitio Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Cognitio Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Cognitio Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey2/.$Entebbe Meeting Room, Andela Kampala"
                onClick={[Function]}
              >
                <div
                  key="Entebbe Meeting Room, Andela Kampala"
                >
                  <p
                    className="legend left"
                  >
                    Entebbe Meeting Room, Andela Kampala
                  </p>
                  <img
                    alt="Entebbe Meeting Room, Andela Kampala"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey3/.$Banku Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Banku Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Banku Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey0clone/.$Safari Meeting Room, Andela New York"
                onClick={[Function]}
              >
                <div
                  key="Safari Meeting Room, Andela New York"
                >
                  <p
                    className="legend left"
                  >
                    Safari Meeting Room, Andela New York
                  </p>
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    src="test-file-stub"
                  />
                </div>
              </li>
            </ul>
          </ReactSwipe>
        </div>
        <button
          className="control-arrow control-next control-disabled"
          onClick={[Function]}
          type="button"
        />
        <ul
          className="control-dots"
        >
          <li
            className="dot"
            key="0/.$Safari Meeting Room, Andela New York"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={0}
          />
          <li
            className="dot selected"
            key="1/.$Cognitio Meeting Room, Andela Lagos"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={1}
          />
          <li
            className="dot"
            key="2/.$Entebbe Meeting Room, Andela Kampala"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={2}
          />
          <li
            className="dot"
            key="3/.$Banku Meeting Room, Andela Lagos"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={3}
          />
        </ul>
      </div>
      <Thumbs
        axis="horizontal"
        onSelectItem={[Function]}
        selectedItem={1}
        transitionTime={2000}
      >
        <div
          className="carousel"
        >
          <div
            className="thumbs-wrapper axis-vertical"
          >
            <button
              className="control-arrow control-prev control-disabled"
              onClick={[Function]}
              type="button"
            />
            <ReactSwipe
              allowMouseEvents={false}
              className="thumbs animated"
              onSwipeDown={[Function]}
              onSwipeEnd={[Function]}
              onSwipeLeft={[Function]}
              onSwipeMove={[Function]}
              onSwipeRight={[Function]}
              onSwipeStart={[Function]}
              onSwipeUp={[Function]}
              selectedItem={1}
              style={
                Object {
                  "MozTransform": "translate3d(NaNpx,0,0)",
                  "MozTransitionDuration": "2000ms",
                  "MsTransform": "translate3d(NaNpx,0,0)",
                  "MsTransitionDuration": "2000ms",
                  "OTransform": "translate3d(NaNpx,0,0)",
                  "OTransitionDuration": "2000ms",
                  "WebkitTransform": "translate3d(NaNpx,0,0)",
                  "WebkitTransitionDuration": "2000ms",
                  "msTransform": "translate3d(NaNpx,0,0)",
                  "msTransitionDuration": "2000ms",
                  "transform": "translate3d(NaNpx,0,0)",
                  "transitionDuration": "2000ms",
                }
              }
              tagName="ul"
              tolerance={0}
            >
              <ul
                className="thumbs animated"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate3d(NaNpx,0,0)",
                    "MozTransitionDuration": "2000ms",
                    "MsTransform": "translate3d(NaNpx,0,0)",
                    "MsTransitionDuration": "2000ms",
                    "OTransform": "translate3d(NaNpx,0,0)",
                    "OTransitionDuration": "2000ms",
                    "WebkitTransform": "translate3d(NaNpx,0,0)",
                    "WebkitTransitionDuration": "2000ms",
                    "msTransform": "translate3d(NaNpx,0,0)",
                    "msTransitionDuration": "2000ms",
                    "transform": "translate3d(NaNpx,0,0)",
                    "transitionDuration": "2000ms",
                  }
                }
              >
                <li
                  className="thumb"
                  key="0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    key=".1/.$Safari Meeting Room, Andela New York"
                    onLoad={[Function]}
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="1"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Cognitio Meeting Room, Andela Lagos"
                    key=".1/.$Cognitio Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="2"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Entebbe Meeting Room, Andela Kampala"
                    key=".1/.$Entebbe Meeting Room, Andela Kampala"
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="3"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    key=".1/.$Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </li>
              </ul>
            </ReactSwipe>
            <button
              className="control-arrow control-next control-disabled"
              onClick={[Function]}
              type="button"
            />
          </div>
        </div>
      </Thumbs>
    </div>
  </Carousel>
</CustomCarousel>
`;

exports[`Carousel component renders correctly 2`] = `
<CustomCarousel
  autoplay={true}
  legendPosition="left"
>
  <Carousel
    autoPlay={true}
    axis="horizontal"
    centerMode={false}
    centerSlidePercentage={80}
    dynamicHeight={false}
    emulateTouch={false}
    infiniteLoop={true}
    interval={3000}
    onChange={[Function]}
    onClickItem={[Function]}
    onClickThumb={[Function]}
    selectedItem={0}
    showArrows={false}
    showIndicators={true}
    showStatus={false}
    showThumbs={true}
    statusFormatter={[Function]}
    stopOnHover={false}
    swipeScrollTolerance={5}
    swipeable={true}
    transitionTime={2000}
    useKeyboardArrows={false}
    verticalSwipe="standard"
    width="100%"
  >
    <div>
      <div
        className="carousel carousel-slider"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <button
          className="control-arrow control-prev control-disabled"
          onClick={[Function]}
          type="button"
        />
        <div
          className="slider-wrapper axis-horizontal"
          style={Object {}}
        >
          <ReactSwipe
            allowMouseEvents={false}
            className="slider animated"
            onSwipeDown={[Function]}
            onSwipeEnd={[Function]}
            onSwipeLeft={[Function]}
            onSwipeMove={[Function]}
            onSwipeRight={[Function]}
            onSwipeStart={[Function]}
            onSwipeUp={[Function]}
            selectedItem={0}
            style={
              Object {
                "MozTransform": "translate3d(-100%,0,0)",
                "MozTransitionDuration": "2000ms",
                "MsTransform": "translate3d(-100%,0,0)",
                "MsTransitionDuration": "2000ms",
                "OTransform": "translate3d(-100%,0,0)",
                "OTransitionDuration": "2000ms",
                "WebkitTransform": "translate3d(-100%,0,0)",
                "WebkitTransitionDuration": "2000ms",
                "msTransform": "translate3d(-100%,0,0)",
                "msTransitionDuration": "2000ms",
                "transform": "translate3d(-100%,0,0)",
                "transitionDuration": "2000ms",
              }
            }
            tagName="ul"
            tolerance={5}
          >
            <ul
              className="slider animated"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "MozTransform": "translate3d(-100%,0,0)",
                  "MozTransitionDuration": "2000ms",
                  "MsTransform": "translate3d(-100%,0,0)",
                  "MsTransitionDuration": "2000ms",
                  "OTransform": "translate3d(-100%,0,0)",
                  "OTransitionDuration": "2000ms",
                  "WebkitTransform": "translate3d(-100%,0,0)",
                  "WebkitTransitionDuration": "2000ms",
                  "msTransform": "translate3d(-100%,0,0)",
                  "msTransitionDuration": "2000ms",
                  "transform": "translate3d(-100%,0,0)",
                  "transitionDuration": "2000ms",
                }
              }
            >
              <li
                className="slide"
                key="itemKey3clone/.$Banku Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Banku Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Banku Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide selected"
                key="itemKey0/.$Safari Meeting Room, Andela New York"
                onClick={[Function]}
              >
                <div
                  key="Safari Meeting Room, Andela New York"
                >
                  <p
                    className="legend left"
                  >
                    Safari Meeting Room, Andela New York
                  </p>
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey1/.$Cognitio Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Cognitio Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Cognitio Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Cognitio Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey2/.$Entebbe Meeting Room, Andela Kampala"
                onClick={[Function]}
              >
                <div
                  key="Entebbe Meeting Room, Andela Kampala"
                >
                  <p
                    className="legend left"
                  >
                    Entebbe Meeting Room, Andela Kampala
                  </p>
                  <img
                    alt="Entebbe Meeting Room, Andela Kampala"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide"
                key="itemKey3/.$Banku Meeting Room, Andela Lagos"
                onClick={[Function]}
              >
                <div
                  key="Banku Meeting Room, Andela Lagos"
                >
                  <p
                    className="legend left"
                  >
                    Banku Meeting Room, Andela Lagos
                  </p>
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </div>
              </li>
              <li
                className="slide selected"
                key="itemKey0clone/.$Safari Meeting Room, Andela New York"
                onClick={[Function]}
              >
                <div
                  key="Safari Meeting Room, Andela New York"
                >
                  <p
                    className="legend left"
                  >
                    Safari Meeting Room, Andela New York
                  </p>
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    src="test-file-stub"
                  />
                </div>
              </li>
            </ul>
          </ReactSwipe>
        </div>
        <button
          className="control-arrow control-next control-disabled"
          onClick={[Function]}
          type="button"
        />
        <ul
          className="control-dots"
        >
          <li
            className="dot selected"
            key="0/.$Safari Meeting Room, Andela New York"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={0}
          />
          <li
            className="dot"
            key="1/.$Cognitio Meeting Room, Andela Lagos"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={1}
          />
          <li
            className="dot"
            key="2/.$Entebbe Meeting Room, Andela Kampala"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={2}
          />
          <li
            className="dot"
            key="3/.$Banku Meeting Room, Andela Lagos"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
            value={3}
          />
        </ul>
      </div>
      <Thumbs
        axis="horizontal"
        onSelectItem={[Function]}
        selectedItem={0}
        transitionTime={2000}
      >
        <div
          className="carousel"
        >
          <div
            className="thumbs-wrapper axis-vertical"
          >
            <button
              className="control-arrow control-prev control-disabled"
              onClick={[Function]}
              type="button"
            />
            <ReactSwipe
              allowMouseEvents={false}
              className="thumbs animated"
              onSwipeDown={[Function]}
              onSwipeEnd={[Function]}
              onSwipeLeft={[Function]}
              onSwipeMove={[Function]}
              onSwipeRight={[Function]}
              onSwipeStart={[Function]}
              onSwipeUp={[Function]}
              selectedItem={0}
              style={
                Object {
                  "MozTransform": "translate3d(NaNpx,0,0)",
                  "MozTransitionDuration": "2000ms",
                  "MsTransform": "translate3d(NaNpx,0,0)",
                  "MsTransitionDuration": "2000ms",
                  "OTransform": "translate3d(NaNpx,0,0)",
                  "OTransitionDuration": "2000ms",
                  "WebkitTransform": "translate3d(NaNpx,0,0)",
                  "WebkitTransitionDuration": "2000ms",
                  "msTransform": "translate3d(NaNpx,0,0)",
                  "msTransitionDuration": "2000ms",
                  "transform": "translate3d(NaNpx,0,0)",
                  "transitionDuration": "2000ms",
                }
              }
              tagName="ul"
              tolerance={0}
            >
              <ul
                className="thumbs animated"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "MozTransform": "translate3d(NaNpx,0,0)",
                    "MozTransitionDuration": "2000ms",
                    "MsTransform": "translate3d(NaNpx,0,0)",
                    "MsTransitionDuration": "2000ms",
                    "OTransform": "translate3d(NaNpx,0,0)",
                    "OTransitionDuration": "2000ms",
                    "WebkitTransform": "translate3d(NaNpx,0,0)",
                    "WebkitTransitionDuration": "2000ms",
                    "msTransform": "translate3d(NaNpx,0,0)",
                    "msTransitionDuration": "2000ms",
                    "transform": "translate3d(NaNpx,0,0)",
                    "transitionDuration": "2000ms",
                  }
                }
              >
                <li
                  className="thumb"
                  key="0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Safari Meeting Room, Andela New York"
                    key=".1/.$Safari Meeting Room, Andela New York"
                    onLoad={[Function]}
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="1"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Cognitio Meeting Room, Andela Lagos"
                    key=".1/.$Cognitio Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="2"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Entebbe Meeting Room, Andela Kampala"
                    key=".1/.$Entebbe Meeting Room, Andela Kampala"
                    src="test-file-stub"
                  />
                </li>
                <li
                  className="thumb"
                  key="3"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <img
                    alt="Banku Meeting Room, Andela Lagos"
                    key=".1/.$Banku Meeting Room, Andela Lagos"
                    src="test-file-stub"
                  />
                </li>
              </ul>
            </ReactSwipe>
            <button
              className="control-arrow control-next control-disabled"
              onClick={[Function]}
              type="button"
            />
          </div>
        </div>
      </Thumbs>
    </div>
  </Carousel>
</CustomCarousel>
`;
